k8s/k3s/dev/aicofounder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aicofounder
  namespace: aicofounder-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: aicofounder.dreamwiseai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aicofounder
                port:
                  number: 3000
